--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,126 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: grid;
+  place-content: center;
+  background: url(https://th.bing.com/th/id/R.3926973ec3b5000c23c4c88e9871a960?rik=xXVSRNtbPIs9AQ&pid=ImgRaw&r=0);
+  background-repeat: no-repeat;
+  background-size: cover;
+  cursor: grab;
+}
+
+h1:hover {
+  font-style: italic;
+  transition: 1.5s;
+  color: aqua;
+  transform:translateX(400px);
+ 
+  opacity: 1;
+}
+
+
+h1 {
+  color: white;
+  background-color: black;
+  border: 1px solid #eee;
+  border-radius: 50px;
+  font-size: 30px;
+  font-weight: 700;
+  width: 100%;
+  height: 100%;
+  opacity: 0.3;
+  
+  
+  animation: 1.5s appear 0.5s ease-in-out;
+}
+
+@keyframes appear {
+  0% {
+    transform: translateY(-200px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+
+
+textarea {
+  font-family: inherit;
+  margin-bottom: 8px;
+  padding-left: 5px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul, h4 {
+  color: white;
+  margin: 0;
+  padding: 0;
+
+
+  animation: 1.5s flash 0.5s ease-in-out;
+}
+
+@keyframes flash {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+img {
+  border-radius: 250px;
+  height: auto;
+  width: 50px;
+}
+
+
+img:hover {
+  transform: scale(2);
+  transition: transform 1s ease-in-out;
+}
+
+img{
+  transform: scale(1);
+  transition: transform 0.5s ease-in-out;
+}
+
+ul li {
+  background-color: black;
+  border-radius: 4px;
+  border: 1px solid #eee;
+  list-style: none;
+  margin-bottom: 16px;
+  max-width: 320px;
+  padding: 8px 32px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+
+  animation: 1.5s appear 0.5s ease-in-out;
+}
+
+@keyframes appear {
+  0% {
+    transform: translateY(1000px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+form input {
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  padding: 4px 6px;
+  margin: 0  0 4px;
+
 }
