--- a/src/index.css
+++ b/src/index.css
@@ -13,41 +13,28 @@ body {
   cursor: grab;
 }
 
-h1:hover {
-  font-style: italic;
-  transition: 1.5s;
-  color: aqua;
-  transform:translateX(400px);
- 
-  opacity: 1;
-}
-
-
 h1 {
-  color: white;
-  background-color: black;
-  border: 1px solid #eee;
-  border-radius: 50px;
+  position: relative;
+  right: 50px;
+  color: black;
+  background-color: white;
+  border: 3px solid gray;
+  border-radius: 10px;
   font-size: 30px;
-  font-weight: 700;
+  letter-spacing: 2pt;
+  font-weight: 400;
+  padding: 10px;
   width: 100%;
   height: 100%;
-  opacity: 0.3;
-  
-  
-  animation: 1.5s appear 0.5s ease-in-out;
+  text-shadow: 0 0 5px gray;
+  transition: all 1s ease;
 }
 
-@keyframes appear {
-  0% {
-    transform: translateY(-200px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+h1:hover {
+  transform: translateY(-10px);
+  transition: all 1s ease;
+  box-shadow: 0 0 10px white;
 }
-
-
 
 textarea {
   font-family: inherit;
